Fix bouton 'modifier' fonctionne pas + formulaire invisible par defaut

--- a/kikoo.css
+++ b/kikoo.css
@@ -64,6 +64,7 @@ a:hover{
             display:block;
          }
 #form{
+    display:none;
     background:#3a3a3a;
     border-top:1px solid #333;
     border-bottom:1px solid #222;
